--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                     <a class="nav-link link text-white display-4" href="https://mobirise.com"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span></a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="page1.html#testimonials2-j"><span class="mobi-mbri mobi-mbri-github mbr-iconfont mbr-iconfont-btn"></span>
-                    了解更多&nbsp;</a></div>
+                    了解个人</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header9 cid-rsGadVFe6o mbr-fullscreen mbr-parallax-background" id="header9-b">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header9 cid-rsGadVFe6o mbr-fullscreen mbr-parallax-background" id="header9-b">
 
     
 
